# cloud-spanner-emulator

./: .bazelrc  .dockerignore  .gitignore  BUILD  BUILD.bazel  CHANGELOG.md  CONTRIBUTING.md  README.md  THIRD_PARTY_NOTICES.txt  WORKSPACE  maven_install.json
.devcontainer/: devcontainer.json
.github/workflows/: build-binaries.yaml
backend/access/: BUILD  read.cc  read.h  read_test.cc  write.cc  write.h  write_test.cc
backend/actions/: BUILD  OWNERS  action.cc  action.h  change_stream.cc  change_stream.h  change_stream_test.cc  check_constraint.cc  check_constraint.h  column_value.cc  column_value.h  column_value_test.cc  context.h  evaluated_column.cc  evaluated_column.h  existence.cc  existence.h  existence_test.cc  foreign_key.cc  foreign_key.h  foreign_key_actions.cc  foreign_key_actions.h  foreign_key_actions_test.cc  foreign_key_test.cc  generated_column.cc  generated_column.h  index.cc  index.h  index_test.cc  interleave.cc  interleave.h  interleave_test.cc  manager.cc  manager.h  ops.cc  ops.h  unique_index.cc  unique_index.h  unique_index_test.cc
backend/common/: BUILD  case.h  case_test.cc  ids.h  (+13 more)
bazel/: portpicker.BUILD
binaries/: BUILD  emulator_main.cc  gateway_main.go
common/: BUILD  bit_reverse.cc  bit_reverse.h  change_stream.cc  change_stream.h  clock.cc  clock.h  clock_test.cc  config.cc  config.h  constants.h  errors.cc  errors.h  feature_flags.h  feature_flags_test.cc  limits.h  pg_literals.cc  pg_literals.h  pg_literals_test.cc
gateway/: BUILD  gateway.go  operations.yaml  spanner_database_admin.yaml  spanner_instance_admin.yaml
(+728 files in other folders)
